[package]
name = "gmblapi"
version = "0.1.0"
edition = "2021"

[dependencies]  
reqwest = { version = "0.11", features = ["json"] }  # Ensure the json feature is enabled  
actix-web = "4"  
serde_json = "1.0"  
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres"] }  
actix-rt = "2"  
dotenv = "0.15"  
serde = { version = "1.0", features = ["derive"] }  
chrono = { version = "0.4", features = ["serde"] } 
validator = { version = "0.15", features = ["derive"] }  
env_logger = "0.9"  